2010-02-24  Guillaume Smet <guillaume.smet@gmail.com>

	* applied [#1010728] support for rsyslog timestamp format by Peter Eisentraut
	slightly modified by me

2009-09-01  Guillaume Smet <guillaume-pg@smet.org>

	* applied [#1010669] Add a '-quiet' option so unrecognised lines are not
	displayed by Chris Smith

2009-08-24  Guillaume Smet <guillaume-pg@smet.org>

	* added -maxquerylength option per request from Josh Berkus
	* added a CSV query report per request from David Fetter

2009-04-26  Guillaume Smet <guillaume-pg@smet.org>

	* added normalization of IN() clauses
	* changed the default order of reports
	* raised the default memory limit to 512 MB
	* released 1.1

2009-04-25  Guillaume Smet <guillaume-pg@smet.org>

	* fixed an oversight in stderr parser related to [#1010525] stderr
	Multiline queries are not parsed
	* backported fixes from BRANCH_1_0

2009-04-18  Guillaume Smet <guillaume-pg@smet.org>

	* added support for lists and regexps in -user and -database filter options
	* updated GeSHi to 1.0.8.3

2009-04-12  Guillaume Smet <guillaume-pg@smet.org>

	* implemented a simple garbage collector mechanism which should reduce
	dramatically the memory usage when a connection pooler is not used

2009-04-05  Guillaume Smet <guillaume-pg@smet.org>

	* applied a patch from Max Valjanski to support large pids on 64 bits
	servers
	* applied a patch from Steve Woodcock to fix a long standing problem
	resulting in leading "statement: " in the query text for some queries

2009-04-01  Guillaume Smet <guillaume-pg@smet.org>

	* applied [#1010529] Error in normalize for bigint (or numeric) numbers
	(length > 10) by Oleg Serov

2008-05-15  Guillaume Smet <guillaume-pg@smet.org>

	* fixed the regexp of the stderr parser to exclude the timezone
	from the timestamp pattern
	* fixed a problem with NOTICE lines causing other lines to be ignored
	(not sure about the consequences though...)

2008-05-13  Guillaume Smet <guillaume-pg@smet.org>

	* moved from Vera to DejaVuSans
